--- a/lesson14/index.html
+++ b/lesson14/index.html
@@ -32,17 +32,17 @@
 <body>
     <main>
         <header>
-            <a href="">
+            <a href="#">
                 <span>S</span>TRAVEL
             </a>
 
             <nav>
                 <ul>
-                    <li><a href="">Trang Chủ</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Điểm Đến</a></li>
-                    <li><a href="">Dịch Vụ</a></li>
-                    <li><a href="">Ảnh</a></li>
+                    <li><a href="#">Trang Chủ</a></li>
+                    <li><a href="#view">About</a></li>
+                    <li><a href="#places">Điểm Đến</a></li>
+                    <li><a href="#service">Dịch Vụ</a></li>
+                    <li><a href="#mumbai-pictures">Ảnh</a></li>
                     <li><a href="">Blogs</a></li>
                 </ul>
             </nav>
@@ -106,7 +106,8 @@
                     <h3>Những Điểm Đến Ở Mumbai</h3>
                     <h2>Những Điểm Du Lịch Bậc Nhất</h2>
                     <div class="layout">
-                        <div class="layout-content" style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
+                        <div class="layout-content"
+                            style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                             <img src="https://stravelhtml.vercel.app/mumbai/images/des-1.jpg" alt="">
                             <div class="desc">
                                 <h3>Ấn Độ Môn</h3>
@@ -122,11 +123,13 @@
                             </div>
                         </div>
 
-                        <div class="layout-content" style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
+                        <div class="layout-content"
+                            style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                             <img src="https://stravelhtml.vercel.app/mumbai/images/des-2.jpg" alt="">
                             <div class="desc">
                                 <h3>Tòa Nhà Hình Trứng</h3>
-                                <p>Nghệ Thuật Kiến Trúc Thị Giác Kết Hợp Với Cách Sản Xuất, Sử Dụng Và Tái Tạo Năng Lượng Thông Minh</p>
+                                <p>Nghệ Thuật Kiến Trúc Thị Giác Kết Hợp Với Cách Sản Xuất, Sử Dụng Và Tái Tạo Năng
+                                    Lượng Thông Minh</p>
 
                                 <div style="display: flex; justify-content: space-between;">
                                     <span style="width: 20px;"></span>
@@ -139,11 +142,13 @@
                         </div>
 
 
-                        <div class="layout-content" style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
+                        <div class="layout-content"
+                            style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                             <img src="https://stravelhtml.vercel.app/mumbai/images/des-3.jpg" alt="">
                             <div class="desc">
                                 <h3>Vườn Quốc Gia Sanjay Gandhi</h3>
-                                <p>Bao Gồm Loài Bướm Đêm Atlas – Bướm Đêm Lớn Nhất Thế Giới, Cây Hoa Karvi 7 Năm Nở Hoa Một Lần…</p>
+                                <p>Bao Gồm Loài Bướm Đêm Atlas – Bướm Đêm Lớn Nhất Thế Giới, Cây Hoa Karvi 7 Năm Nở Hoa
+                                    Một Lần…</p>
 
                                 <div style="display: flex; justify-content: space-between;">
                                     <span style="width: 20px;"></span>
@@ -156,7 +161,8 @@
                         </div>
 
 
-                        <div class="layout-content" style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
+                        <div class="layout-content"
+                            style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                             <img src="https://stravelhtml.vercel.app/mumbai/images/des-4.jpg" alt="">
                             <div class="desc">
                                 <h3>Trung Tâm Triễn Lãm Jehanggir</h3>
@@ -172,11 +178,13 @@
                             </div>
                         </div>
 
-                        <div class="layout-content" style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
+                        <div class="layout-content"
+                            style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                             <img src="https://stravelhtml.vercel.app/mumbai/images/des-5.jpg" alt="">
                             <div class="desc">
                                 <h3>Hang Động Elephanta</h3>
-                                <p>Lưu Giữ Nhiều Kiến Trúc Chạm Khắc Tinh Xảo Và Chúng Đã Xuất Hiện Ở Đây Từ Thế Kỷ Thứ 5 Đến Thứ 8</p>
+                                <p>Lưu Giữ Nhiều Kiến Trúc Chạm Khắc Tinh Xảo Và Chúng Đã Xuất Hiện Ở Đây Từ Thế Kỷ Thứ
+                                    5 Đến Thứ 8</p>
 
                                 <div style="display: flex; justify-content: space-between;">
                                     <span style="width: 20px;"></span>
@@ -188,7 +196,8 @@
                             </div>
                         </div>
 
-                        <div class="layout-content" style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
+                        <div class="layout-content"
+                            style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                             <img src="https://stravelhtml.vercel.app/mumbai/images/des-6.jpg" alt="">
                             <div class="desc">
                                 <h3>Lonavala Và Khandala</h3>
@@ -204,11 +213,13 @@
                             </div>
                         </div>
 
-                        <div class="layout-content" style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
+                        <div class="layout-content"
+                            style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                             <img src="https://stravelhtml.vercel.app/mumbai/images/des-7.jpg" alt="">
                             <div class="desc">
                                 <h3>Thành Phố Pune</h3>
-                                <p>Giáo Dục, Nghệ Thuật Và Âm Nhạc Là Trọng Tâm Tại Thành Phố Có Nền Văn Hóa Phong Phú Lâu Đời Này.</p>
+                                <p>Giáo Dục, Nghệ Thuật Và Âm Nhạc Là Trọng Tâm Tại Thành Phố Có Nền Văn Hóa Phong Phú
+                                    Lâu Đời Này.</p>
 
                                 <div style="display: flex; justify-content: space-between;">
                                     <span style="width: 20px;"></span>
@@ -220,11 +231,13 @@
                             </div>
                         </div>
 
-                        <div class="layout-content" style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
+                        <div class="layout-content"
+                            style="width: 100%; overflow: hidden; border-radius: 20px; box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;">
                             <img src="https://stravelhtml.vercel.app/mumbai/images/des-8.jpg" alt="">
                             <div class="desc">
                                 <h3>Thành Phố Nashik</h3>
-                                <p>Là Trung Tâm Hành Hương Lớn Của Người Hindu. Nashik Có Sự Pha Trộn Của Nét Cổ Xưa Và Hiện Đại</p>
+                                <p>Là Trung Tâm Hành Hương Lớn Của Người Hindu. Nashik Có Sự Pha Trộn Của Nét Cổ Xưa Và
+                                    Hiện Đại</p>
 
                                 <div style="display: flex; justify-content: space-between;">
                                     <span style="width: 20px;"></span>
@@ -240,7 +253,7 @@
                 </div>
             </section>
 
-
+            <!-- SERVICE -->
             <section id="service">
                 <div class="service-content">
                     <h3>Dịch Vụ</h3>
@@ -281,6 +294,165 @@
                             <h3>Hỗ Trợ 24/7</h3>
                             <p>Some Text...</p>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- PICTURE OF MUMBAI -->
+            <section id="mumbai-pictures">
+                <div class="mumbai-contents">
+                    <h3>Những Bức Ảnh Về Mumbai</h3>
+                    <div class="mumbai-layout">
+                        <div class="mumbai-item">
+                            <img src="https://stravelhtml.vercel.app/mumbai/images/gallery-img-1.jpg" alt="">
+                            <p>Thành Phố Mumbai</p>
+                            <h3>Vườn Quốc Gia Sanjay Gandhi</h3>
+                        </div>
+
+                        <div class="mumbai-item">
+                            <img src="https://stravelhtml.vercel.app/mumbai/images/gallery-img-2.jpg" alt="">
+                            <p>Thành Phố Mumbai</p>
+                            <h3>Nhà Thờ St John The Evangelist</h3>
+                        </div>
+
+                        <div class="mumbai-item">
+                            <img src="https://stravelhtml.vercel.app/mumbai/images/gallery-img-3.jpg" alt="">
+                            <p>Nằm Trên Đỉnh Ngọn Đồi Malabar Ở Mumbai</p>
+                            <h3>Vườn Treo Mumbai</h3>
+                        </div>
+
+                        <div class="mumbai-item">
+                            <img src="https://stravelhtml.vercel.app/mumbai/images/gallery-img-4.jpg" alt="">
+                            <p>Bảo Tàng Viện Của Thành Phố Mumbai</p>
+                            <h3>Dr. Bhau Daji Lad</h3>
+                        </div>
+
+                        <div class="mumbai-item">
+                            <img src="https://stravelhtml.vercel.app/mumbai/images/gallery-img-5.jpg" alt="">
+                            <p>Di Sản Thế Giới Được UNESCO Nhìn Nhận.</p>
+                            <h3>Tòa Đô Chánh Mumbai</h3>
+                        </div>
+
+                        <div class="mumbai-item">
+                            <img src="https://stravelhtml.vercel.app/mumbai/images/gallery-img-6.jpg" alt="">
+                            <p>Mumbai</p>
+                            <h3>Kiến Trúc Thời Victoria</h3>
+                        </div>
+
+                        <div class="mumbai-item">
+                            <img src="https://stravelhtml.vercel.app/mumbai/images/gallery-img-7.jpg" alt="">
+                            <p>Khách Sạn 5 Sao Ở Mumbai</p>
+                            <h3>Khách Sạn Taj Mahal</h3>
+                        </div>
+
+                        <div class="mumbai-item">
+                            <img src="https://stravelhtml.vercel.app/mumbai/images/gallery-img-8.jpg" alt="">
+                            <p>Phía Đông Thành Phố Mumbai</p>
+                            <h3>Hang Động Elephanta</h3>
+                        </div>
+
+                        <div class="mumbai-item">
+                            <img src="https://stravelhtml.vercel.app/mumbai/images/gallery-img-9.jpg" alt="">
+                            <p>Mumbai</p>
+                            <h3>Phiên Chợ Địa Phương</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- REVIEWER -->
+            <section id="reviewer">
+                <div class="reviewer-contents">
+                    <div class="left-contents" style="width: 50%;">
+                        <h3>Những Lời Đánh Giá Tốt Nhất</h3>
+                        <p>Tất Cả Những Lời Đánh Giá Chúng Tôi Đều Ghi Nhận Và Tiếp Thu Để Phát Triển. Đây Là Những Đánh
+                            Giá Tốt Nhất Về Chuyến Đi Mumbai Này.</p>
+                    </div>
+                    <div class="right-contents-layout" style="width: 50%;">
+                        <div class="right-contents">
+                            <p>Chuyến Đi Rất Vui, Giá Rất Rẻ. Gọi Tư Vấn Rất Nhanh. Tôi Sẽ Quay Lại Đay Môt Lần Nữa</p>
+                            <div style="display: flex; gap: 20px; align-items: center; margin-top: 10px;">
+                                <img src="https://stravelhtml.vercel.app/mumbai/images/pic-1.png" alt="avatar">
+                                <div>
+                                    <h3>Duong Nguyen</h3>
+                                    <p>Nội Trợ</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="right-contents">
+                            <p>Chuyến Đi Rất Vui, Đáng Để Thử. Đồ Ăn Ở Đây Rất Ngon. Chắc Chắn Sẽ Quay Lại Vì Đồ Ăn Hihi
+                            </p>
+                            <div style="display: flex; gap: 20px; align-items: center; margin-top: 10px;">
+                                <img src="https://stravelhtml.vercel.app/mumbai/images/pic-2.png" alt="avatar">
+                                <div>
+                                    <h3>Some People</h3>
+                                    <p>Nội Trợ</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="right-contents">
+                            <p>Khách Sạn Ở Rất Tuyệt. Thích Hợp Với 1 Chỗ Nghỉ Dưỡng.</p>
+                            <div style="display: flex; gap: 20px; align-items: center; margin-top: 10px;">
+                                <img src="https://stravelhtml.vercel.app/mumbai/images/pic-3.png" alt="avatar">
+                                <div>
+                                    <h3>Some People</h3>
+                                    <p>Nằm Nhà</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="right-contents">
+                            <p>Hướng Dẫn Viên Rất Chu Đáo. Mọi Dịch Vụ Đều Có Và Rất Thoải Mái</p>
+                            <div style="display: flex; gap: 20px; align-items: center; margin-top: 10px;">
+                                <img src="https://stravelhtml.vercel.app/mumbai/images/pic-4.png" alt="avatar">
+                                <div>
+                                    <h3>Some People</h3>
+                                    <p>...</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- FORM REVIEW -->
+            <section id="form-review">
+                <div class="form-review-contents">
+                    <h3>ĐÁNH GIÁ</h3>
+                    <div class="form-review-layout">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.3492580035913!2d105.78524227509561!3d21.018706888124125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab4df3c6c329%3A0xd8e14fe61fd32604!2zQ8OUTkcgVFkgQ-G7lCBQSOG6pk4gQ8OUTkcgTkdI4buGIEdJw4FPIEThu6RDIEY4!5e0!3m2!1sen!2s!4v1712326504440!5m2!1sen!2s"
+                            width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <form action="">
+                            <div class="form-content">
+                                <div>
+                                    <input autofocus type="text" placeholder="Tên của bạn" name="name">
+                                </div>
+
+                                <div>
+                                    <input type="text" placeholder="Email liên hệ" name="email">
+                                </div>
+
+                                <div>
+                                    <input type="text" placeholder="Số điện thoại" name="phone">
+                                </div>
+
+                                <div>
+                                    <input type="text" placeholder="Chủ đề" name="topic">
+                                </div>
+
+                                <textarea placeholder="Viết đánh giá của bạn về chuyến đi"
+                                    style="background-color: #f7f7f7; grid-column: span 2; padding: 10px; font-size: 16px; resize: none;"
+                                    cols="30" rows="10"></textarea>
+
+                                <div class="btn">
+                                    <button type="button" style="cursor: pointer;">Gửi Tới Stravel</button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </section>
