feat: blog layout, footer banner

--- a/lesson14/index.html
+++ b/lesson14/index.html
@@ -426,7 +426,7 @@
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.3492580035913!2d105.78524227509561!3d21.018706888124125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab4df3c6c329%3A0xd8e14fe61fd32604!2zQ8OUTkcgVFkgQ-G7lCBQSOG6pk4gQ8OUTkcgTkdI4buGIEdJw4FPIEThu6RDIEY4!5e0!3m2!1sen!2s!4v1712326504440!5m2!1sen!2s"
                             width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
-                        <form action="">
+                        <form action="server" method="post">
                             <div class="form-content">
                                 <div>
                                     <input autofocus type="text" placeholder="Tên của bạn" name="name">
@@ -456,7 +456,99 @@
                     </div>
                 </div>
             </section>
+
+            <!-- BLOG -->
+            <section id="blog">
+                <div class="blog-contents">
+                    <h2>Dịch Vụ</h2>
+                    <h3>Nâng Cao Trải Nghiệm</h3>
+                    <div class="blog-layout">
+                        <div class="blog-layout-item">
+                            <a href="#">
+                                <div class="img-blog">
+                                    <img src="https://stravelhtml.vercel.app/mumbai/images/blog-1.jpg" alt="blog">
+                                </div>
+                                <div class="blog-item-bottom">
+                                    <h3>Mang Những Gì Khi Đi Mumbai</h3>
+                                    <p>Giấy Tờ Tuỳ Thân, Giấy Xác Minh Tài Chính, Visa, Vé Máy Bay, Trang Phục, Đồ Dùng
+                                        Cá Nhân, Balo, Túi Đựng Đồ...</p>
+                                    <div class="blog-item-info">
+                                        <div style="display: flex; align-items: center; gap: 5px;">
+                                            <i class="fa-solid fa-clock" style="color: #ffa500;"></i>
+                                            <p>22,11, 2021</p>
+                                        </div>
+                                        <div style="display: flex; align-items: center; gap: 5px;">
+                                            <i class="fa-solid fa-user" style="color: #ffa500;"></i>
+                                            <p>By Admin</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="blog-layout-item">
+                            <a href="#">
+                                <div class="img-blog">
+                                    <img src="https://stravelhtml.vercel.app/mumbai/images/blog-2.jpg" alt="blog">
+                                </div>
+                                <div class="blog-item-bottom">
+                                    <h3>Xin Visa Đi Mumbai</h3>
+                                    <p>Visa Ai Cập Không Khó Xin, Thủ Tục Đơn Giản Gồm Đơn Tải Từ Trang Web Chính Thức Của Đại Sứ Quán.</p>
+                                    <div class="blog-item-info">
+                                        <div style="display: flex; align-items: center; gap: 5px;">
+                                            <i class="fa-solid fa-clock" style="color: #ffa500;"></i>
+                                            <p>22,11, 2021</p>
+                                        </div>
+                                        <div style="display: flex; align-items: center; gap: 5px;">
+                                            <i class="fa-solid fa-user" style="color: #ffa500;"></i>
+                                            <p>By Admin</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+                        <div class="blog-layout-item">
+                            <a href="#">
+                                <div class="img-blog">
+                                    <img src="https://stravelhtml.vercel.app/mumbai/images/blog-3.jpg" alt="blog">
+                                </div>
+                                <div class="blog-item-bottom">
+                                    <h3>Phương Tiện Di Chuyển</h3>
+                                    <p>Bạn Có Thể Đi Xe Bus, Tàu Lửa, Tàu Thủy Hoặc Bất Cứ Phương Tiện Nào Có Thể Di Chuyển Đều Được.</p>
+                                    <div class="blog-item-info">
+                                        <div style="display: flex; align-items: center; gap: 5px;">
+                                            <i class="fa-solid fa-clock" style="color: #ffa500;"></i>
+                                            <p>21st May, 2021</p>
+                                        </div>
+                                        <div style="display: flex; align-items: center; gap: 5px;">
+                                            <i class="fa-solid fa-user" style="color: #ffa500;"></i>
+                                            <p>By Admin</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
+        <!-- FOOTER BANNER -->
+        <section id="footer-banner">
+            <div class="footer-banner-content">
+                <h2>Cùng STravel</h2>
+                <h3>Bắt Đầu Chuyến Đi Của Bạn</h3>
+                <p>Mỗi Chuyến Đi Đều Là Một Kỷ Niệm Đẹp. Hãy Cùng STravel Ghi Lại Kỷ Niệm Này !</p>
+                <a href="#">Đặt Ngay</a>
+            </div>
+        </section>
+
+        <!-- FOOTER -->
+        <footer>
+            <div class="footer-layout">
+                
+            </div>
+        </footer>
     </main>
 
     <!-- SLICK SLIDER SCRIPT -->
